// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table[Base] should render correctly  1`] = `
<div>
  <div
    class="clqa00y soui-table-wrapper c-ij6nwp soui-table-vertical-align-top ckw38ls soui-table-default"
  >
    <div
      class="c-6o2z8g soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-4ixgjz soui-table-cell-ignore-border"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about border 1`] = `
<div>
  <div
    class="clqa00y soui-table-wrapper cw6ahzw soui-table-bordered c-ij6nwp soui-table-vertical-align-top ckw38ls soui-table-default"
  >
    <div
      class="c-6o2z8g soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-4ixgjz soui-table-cell-ignore-border"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class="cd9nxu6 soui-table-row-striped"
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class="cd9nxu6 soui-table-row-striped"
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about group 1`] = `
<div
  class="clqa00y soui-table-wrapper cw6ahzw soui-table-bordered c-ij6nwp soui-table-vertical-align-top ckw38ls soui-table-default"
>
  <div
    class="c-6o2z8g soui-table-body-wrapper"
  >
    <table>
      <colgroup>
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
      </colgroup>
      <thead>
        <tr>
          <th
            class="cqb9ymk soui-table-cell-group"
            colspan="3"
            style="padding: 0px;"
          >
            <div>
              <span
                style="background: rgb(232, 235, 240); display: block; line-height: 40px; color: rgb(20, 23, 55);"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="3"
          >
            <div
              class=""
            >
              <span>
                Country
              </span>
            </div>
          </th>
          <th
            class="c-4ixgjz soui-table-cell-ignore-border cqb9ymk soui-table-cell-group"
            colspan="2"
            style="padding: 0px;"
          >
            <div>
              <span>
                Other
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="cqb9ymk soui-table-cell-group"
            colspan="2"
          >
            <div>
              True Name
            </div>
          </th>
          <th
            class=""
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Nick Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Office
              </span>
            </div>
          </th>
          <th
            class="c-4ixgjz soui-table-cell-ignore-border"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Position
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class=""
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                First Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                Last Name
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Ephraim
          </td>
          <td
            class=""
            colspan="1"
          >
            Wisozk
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Reunion
          </td>
          <td
            class=""
            colspan="1"
          >
            Miami
          </td>
          <td
            class="c-4ixgjz soui-table-cell-ignore-border"
            colspan="1"
          >
            Marketing Designer
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Osvaldo
          </td>
          <td
            class=""
            colspan="1"
          >
            Beer
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Syrian Arab Republic
          </td>
          <td
            class=""
            colspan="1"
          >
            San Paulo
          </td>
          <td
            class="c-4ixgjz soui-table-cell-ignore-border"
            colspan="1"
          >
            Financial Controller
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Dylan
          </td>
          <td
            class=""
            colspan="1"
          >
            Ratke
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
          >
            Boston
          </td>
          <td
            class="c-4ixgjz soui-table-cell-ignore-border"
            colspan="1"
          >
            Development Lead
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Shaniya
          </td>
          <td
            class=""
            colspan="1"
          >
            Jacobs
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
          >
            Chengdu
          </td>
          <td
            class="c-4ixgjz soui-table-cell-ignore-border"
            colspan="1"
          >
            Developer
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr />
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-ddd5kv soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="cscg4k5 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-dmr5xa soui-radio-indicator-wrapper"
      >
        <span
          class="co0ikgh soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-2q2qi9 soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-dmr5xa soui-radio-indicator-wrapper"
      >
        <span
          class="co0ikgh soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-2q2qi9 soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="cscg4k5 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-dmr5xa soui-radio-indicator-wrapper"
      >
        <span
          class="co0ikgh soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-2q2qi9 soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="clqa00y soui-table-wrapper c-ij6nwp soui-table-vertical-align-top ckw38ls soui-table-default"
  >
    <div
      class="c-6o2z8g soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-4ixgjz soui-table-cell-ignore-border"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-4ixgjz soui-table-cell-ignore-border"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;
